--- a/gb/23/7/6/n14029156.md
+++ b/gb/23/7/6/n14029156.md
@@ -1,78 +1,78 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>这样吃帮你远离癌症！医生揭秘六类防癌食物</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14029162-f964cb03ba84ae5d58219132189f5ee6-600x400.jpg" />
-<h6>研究发现，经常吃六类食物有助降低罹患癌症的风险。（George Rudy/Shutterstock）
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>吃对食物帮你远离癌症！中医师列6类防癌食物</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/03/id13653741-shutterstock_3149999-600x359.jpg" />
+<h6>许多食物被认为具有抗癌潜力，尽管它们不能替代医学治疗，但在维持健康的饮食和生活方式中起到重要作用。图为全麦面包。(Shutterstock)
 </h6>
 <hr>
-	<p>许多食物被认为具有抗癌潜力，尽管它们不能替代医学治疗，但在维持健康的饮食和生活方式中起到重要作用。以下是一些常见的被认为具有抗癌作用的食物：</p>
-<h2>1、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B0%B4%E6%9E%9C.md#1">水果</a>和<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%94%AC%E8%8F%9C.md#1">蔬菜</a></h2>
-<p>多种<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B0%B4%E6%9E%9C.md#1">水果</a>和<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%94%AC%E8%8F%9C.md#1">蔬菜</a>富含抗氧化剂和营养素，如维生素C、维生素E、类胡萝卜素、叶酸和纤维素。例如，绿叶蔬菜、蓝莓、番茄、胡萝卜、大蒜、洋葱等。</p>
-<p>哈佛大学的研究发现，多吃蔬菜、水果的女性患乳腺癌的风险较低，尤其是西兰花等十字花科蔬菜及胡萝卜等黄色、橙色蔬菜效果更明显，每周吃4份以上的人比每周吃2份或以下的人乳癌风险少17%。</p>
-<h2>2、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9D%9A%E6%9E%9C.md#1">坚果</a>和种子</h2>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9D%9A%E6%9E%9C.md#1">坚果</a>和种子含有健康脂肪、蛋白质、纤维素和抗氧化物质，例如，杏仁、核桃、亚麻籽、葵花籽等。</p>
-<p>《Nutrition Reviews》上刊登的一项研究发现，吃坚果多的人比吃坚果少的人得大肠癌、子宫内膜癌和胰腺癌的概率都比较低。</p>
-<h2>3、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E7%BA%A4%E7%BB%B4%E9%A3%9F%E7%89%A9.md#1">高纤维食物</a></h2>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E7%BA%A4%E7%BB%B4%E9%A3%9F%E7%89%A9.md#1">高纤维食物</a>有助于促进消化系统的健康，并可能降低结肠癌的风险。例如，全谷物、糙米、燕麦、豆类等。</p>
-<p>《American Journal of Clinical Nutrition》上刊登的一项研究发现，摄取膳食纤维有助减低大肠尾端（降结肠和直肠）罹癌的风险达38%，尤其是谷物和水果中的膳食纤维最有效果。</p>
-<h2>4、茶叶</h2>
+<p>日常接触的环境毒素以及遗传因素等都可能和癌症相关，及时清除其中的一些因素就非常重要。许多食物被认为具有抗癌潜力，尽管它们不能替代医学治疗，但在维持健康的饮食和生活方式中起到重要作用。本文总结一些常见的被认为具有防癌作用的食物，并探讨甜食对癌症的影响。</p>
+<h2><span style="color: #188638;">揭秘6类防癌食物</span></h2>
+<h3><span style="color: #333333;">1. 水果和蔬菜</span></h3>
+<p>多种水果和蔬菜富含抗氧化剂和营养素，如维生素C、维生素E、类胡萝卜素、叶酸和纤维素。例如，绿叶蔬菜、蓝莓、番茄、胡萝卜、大蒜、洋葱等。</p>
+<p><span style="font-weight: 400;">哈佛大学的</span><ahref="https://onlinelibrary.wiley.com/doi/full/10.1002/ijc.31653"><span style="font-weight: 400;">研究</span></a><span style="font-weight: 400;">发现，</span>，多吃蔬菜、水果的女性患乳腺癌的风险较低，尤其是西兰花等十字花科蔬菜及胡萝卜等黄色、橙色蔬菜效果更明显，每周吃4份以上的人比每周吃2份或以下的人乳癌风险少17%。</p>
+<figure id="attachment_13910341" aria-describedby="caption-attachment-13910341" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13910341-shutterstock_245873122.jpeg"><img loading="lazy" decoding="async" class="size-large wp-image-13910341" src="https://i.epochtimes.com/assets/uploads/2023/01/id13910341-shutterstock_245873122-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13910341" class="wp-caption-text">十字花科蔬菜含有的吲哚-3-甲醇（I3C），是一种效力强大的抗氧化物。（Shutterstock）</figcaption></figure>
+<h3><span style="color: #333333;">2. 坚果和种子</span></h3>
+<p>坚果和种子含有健康脂肪、蛋白质、纤维素和抗氧化物质，例如，杏仁、核桃、亚麻籽、葵花籽等。</p>
+<p>《Nutrition Reviews》上刊登的<span style="font-weight: 400;">一项</span><ahref="https://pubmed.ncbi.nlm.nih.gov/26081452/"><span style="font-weight: 400;">研究</span></a><span style="font-weight: 400;">发现，</span>吃坚果多的人比吃坚果少的人得大肠癌、子宫内膜癌和胰腺癌的概率都比较低。</p>
+<figure id="attachment_13853323" aria-describedby="caption-attachment-13853323" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/10/id13853323-shutterstock_557400550.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13853323" src="https://i.epochtimes.com/assets/uploads/2022/10/id13853323-shutterstock_557400550-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-13853323" class="wp-caption-text">坚果和种子含有健康脂肪、蛋白质、纤维素和抗氧化物质。（Shutterstock）</figcaption></figure>
+<h3><span style="color: #333333;">3. 高纤维食物</span></h3>
+<p>高纤维食物有助于促进消化系统的健康，并可能降低结肠癌的风险。例如，全谷物、糙米、燕麦、豆类等。</p>
+<p>《美国临床营养学杂志》（American Journal of Clinical Nutrition）上刊登的<span style="font-weight: 400;">一项</span><ahref="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4588743/"><span style="font-weight: 400;">研究</span></a><span style="font-weight: 400;">发现，</span>摄取膳食纤维有助减低大肠尾端（降结肠和直肠）罹癌的风险达38%，尤其是谷物和水果中的膳食纤维最有效果。</p>
+<h3><span style="color: #333333;">4. 茶叶</span></h3>
 <p>绿茶和白茶含有丰富的抗氧化剂，如儿茶素。</p>
-<p>有研究表明儿茶素与抗癌效果有关。根据超过5万人的数据，喝茶多的人比喝茶少的人患癌风险降低17%。</p>
-<h2>5、鱼类</h2>
-<p>富含ω-3脂肪酸的鱼类，如鲑鱼、鳕鱼、沙丁鱼等，被认为对心脏健康有益，并可能与某些癌症的预防有关。</p>
-<p>《BMJ Gut》在2012年刊登的研究显示，多吃ω-3脂肪酸有助预防大肠癌以及容易癌变的大肠息肉。对于癌症患者来说，摄入ω-3脂肪酸也可以增强化疗的效果。</p>
-<h2>6、辣椒和香料</h2>
+<p><span style="font-weight: 400;">有</span><ahref="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7059963/"><span style="font-weight: 400;">研究</span></a><span style="font-weight: 400;">表明</span>儿茶素与抗癌效果有关。根据超过5万人的数据，喝茶多的人比喝茶少的人患癌风险降低17%。</p>
+<h3><span style="color: #333333;">5. 鱼类</span></h3>
+<p>富含ω-3脂肪酸（Omega-3）的鱼类，如鲑鱼、鳕鱼、沙丁鱼等，被认为对心脏健康有益，并可能与某些癌症的预防有关。</p>
+<p>《BMJ 肠道》（BMJ Gut）在2012年刊登的研究显示，多吃ω-3脂肪酸有助预防大肠癌以及容易癌变的大肠息肉。对于癌症患者来说，摄入ω-3脂肪酸也可以增强化疗的效果。</p>
+<h3><span style="color: #333333;">6. 辣椒和香料</span></h3>
 <p>辣椒中的辣椒素被认为具有抗癌潜力。姜、大蒜、肉桂等也被认为具有抗炎和抗氧化的特性。</p>
-<p>最近有科学家在开发辣椒素缓释剂作为抗癌药物。研究发表在《Pharmacology &amp; Therapeutics》。</p>
-<p>除了辣椒之外，2016年发表在《Nutrients》上的研究综述文章指出，辣椒、姜黄、黑种草籽（Nigella sativa）、黑胡椒、藏红花等香料都可以预防和治疗不同种类的癌症。。</p>
-<h2>吃甜的东西会诱发癌症吗？</h2>
+<p>最近有科学家在开发辣椒素缓释剂作为抗癌药物。<ahref="https://www.sciencedirect.com/science/article/abs/pii/S0163725822000717?via%3Dihub"><span style="font-weight: 400;">研究</span></a><span style="font-weight: 400;">发表在</span>《药理学与治疗学》（Pharmacology &amp; Therapeutics）期刊上。</p>
+<p>除了辣椒之外，2016年发表在《营养素》（Nutrients）上的<ahref="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4997408/"><span style="font-weight: 400;">研究综述文章</span></a><span style="font-weight: 400;">指出</span>，辣椒、姜黄、黑种草籽（Nigella sativa）、黑胡椒、藏红花等香料都可以预防和治疗不同种类的癌症。</p>
+<figure id="attachment_13326146" aria-describedby="caption-attachment-13326146" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13326146-shutterstock_1764601901.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13326146" src="https://i.epochtimes.com/assets/uploads/2021/10/id13326146-shutterstock_1764601901-600x400.jpg" alt="Curry,Masala,Powder,With,Ingredients,,Indian,Spice,Powder.,Selective,Focus" width="600" b="400" /></a><figcaption id="caption-attachment-13326146" class="wp-caption-text">辣椒中的辣椒素被认为具有抗癌潜力。（Shutterstock）</figcaption></figure>
+<h2><span style="color: #188638;">吃甜食会诱发癌症吗？</span></h2>
 <p>目前的科学研究尚未明确证明甜食本身可以直接引发癌症。然而，摄入过多的糖和高糖饮食与某些癌症的风险增加有关。</p>
-<p>高糖饮食会导致体重增加、肥胖和与肥胖相关的疾病，如2型糖尿病和心血管疾病。研究发现，肥胖与多种癌症的发生风险增加相关，包括结肠、直肠、胰腺、食管、肾脏、乳房和子宫内膜癌等。大约4%到8%的癌症是由肥胖所致。肥胖也会增加17%的癌症死亡风险。</p>
+<p>高糖饮食会导致体重增加、肥胖和与肥胖相关的疾病，如2型糖尿病和心血管疾病。<ahref="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9857053/"><span style="font-weight: 400;">研究</span></a><span style="font-weight: 400;">发现</span>，肥胖与多种癌症的发生风险增加相关，包括结肠、直肠、胰腺、食管、肾脏、乳房和子宫内膜癌等。大约4%到8%的癌症是由肥胖所致，肥胖也会增加17%的癌症死亡风险。</p>
 <p>此外，高糖饮食还可能引发慢性炎症和胰岛素抵抗，这些都与癌症的发展和进展有关。</p>
-<p>一些研究还发现，癌细胞对糖的摄取需求较高，因为癌细胞依赖糖分解为能量。然而，这并不意味着摄入更多的糖就会导致癌症的发生。</p>
-<p>为了降低患癌症的风险，建议保持均衡的饮食，减少高糖食物的摄入，并确保摄入足够的蔬菜、水果、全谷物和蛋白质。此外，适度的运动和保持健康的体重也对癌症预防至关重要。@</p>
+<p><span style="font-weight: 400;">一些</span><ahref="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4672629/"><span style="font-weight: 400;">研究</span></a><span style="font-weight: 400;">还发现，</span>癌细胞对糖的摄取需求较高，因为癌细胞依赖糖分解为能量。然而，这并不意味着摄入更多的糖就会导致癌症的发生。</p>
+<p>为了降低患癌症的风险，建议保持均衡的饮食，减少高糖食物的摄入，并确保摄入足够的蔬菜、水果、全谷物和蛋白质。此外，适度的运动和保持健康的体重也对癌症预防至关重要。@◇</p>
 <p>责任编辑：陈玟绮</p>
-	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14006090.md#1">缺它全身都出问题 维生素D抗癌防失智这样补才有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/3/n14009357.md#1">肠道中存在神奇菌群 养好它可抗癌、护心血管</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/10/n14013492.md#1">喉癌晚期只能活仨月？针灸加中药竟令他起死回生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/15/n14016700.md#1">切除乳房冲击乳癌患者  医:寻求整形留意风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/29/n14006090.md#1">缺它全身都出问题 维生素D抗癌防失智这样补才有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/3/n14009357.md#1">肠道中存在神奇菌群 养好它可抗癌、护心血管</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/10/n14013492.md#1">喉癌晚期只能活仨月？针灸加中药竟令他起死回生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/15/n14016700.md#1">切除乳房冲击乳癌患者  医:寻求整形留意风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/16/n14017114.md#1">隐藏版的健康食材 平民蔬菜王：地瓜叶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/18/n14018117.md#1">癌症患者ICU内昏迷不醒 服下花旗参后起死回生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/7/5/n14028435.md#1">植物油吃多易发炎？吃这些油维持Omega-3、Omega-6最佳比例</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275470.md#1">常吃超加工食品吗？小心成瘾！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/29/n14237085.md#1">柿子叶 含维生素C高 外用内服两宜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280832.md#1">洗肾第一病因是吃太甜？含糖饮料很伤肾</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/29/n10435561.md#1" target="_blank">罗思义：一个到死还相信共产党伟大的“学者”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/5/n11026306.md#1" target="_blank">冰天雪地 瑞典法轮功学员传真相 感动民众</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/26/n10250277.md#1" target="_blank">中共淫乱的前生今世（7）高危的情妇们</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/1/23/n3784118.md#1" target="_blank">他山：中共政法委的罪恶与政法系统人员的赎罪</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14024670.md#1">父亲称被外星人绑架 美国男子从取笑到相信</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/28/n14023943.md#1">神理分明 他救了人为何还要死去</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14025277.md#1">【未解之谜】新证据出炉？人类已获得UFO！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/27/n14023428.md#1">过了夏至 长夏到 如何养心又养脾胃？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/26/n14022597.md#1">【古道人生】他跌落水中不死 因注定要死在狱中</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14027750.md#1">【探索时分】乌克兰反攻为什么进展缓慢</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028879.md#1">【时事金扫描】“习近平”被监控 谁是头号五毛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028850.md#1">【新闻大家谈】政经危机夹击 中共“招魂”无用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027620.md#1">央视前主持人杨澜公司财产被冻结 商业版图曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027193.md#1">潘功胜意外获任央行书记 专家：习应急之举</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027419.md#1">岳山：习近平泄露中共的“秘密”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027277.md#1">林宥嘉夫妻婚姻经营之道 沟通、学习生活与爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/2/n14026971.md#1">方季惟当年凭特殊手相 当上周星驰电影女主角</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027693.md#1">周润发自曝因寒背开始跑步 感言最受母亲影响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/2/n14026932.md#1">备战当奶爸 订阅破亿网红宣布暂停更新油管频道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/2/n14026965.md#1">台湾乐坛创作不受审查 获赞在华语圈影响巨大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/8/n14012637.md#1">10大伤腰姿势致椎间盘突出 专家教你这样矫正</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027223.md#1">咖啡加1物抗氧化力翻倍 78岁医师分享咖啡养生秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027250.md#1">为什么慢慢喝饮料比一口气喝完更伤牙齿？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/26/n14022914.md#1">止痛药、酸痛贴布用错伤肝肾！专家公开用药秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14025079.md#1">街头小吃店的好味道“柴鱼泡菜小黄瓜”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/6/n14029156.htm">这样吃帮你远离癌症！医生揭秘六类防癌食物</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/6/n14029156.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/7/6/n14029156.htm">吃对食物帮你远离癌症！中医师列6类防癌食物</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/6/n14029156.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
